# driftguard

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: api.rs  cli.rs  db.rs  detector.rs  lib.rs  main.rs  screenshot.rs
