[package]
name = "driftguard"
version = "0.1.0"
edition = "2021"
description = "Real-time web monitoring and change detection system"
authors = ["Anvil <anvil@clawd.earth>"]
license = "MIT"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTML parsing
scraper = "0.21"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Web server
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http = "1"
http-body-util = "0.1"

# UUID
uuid = { version = "1.8", features = ["v4", "serde"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
mockito = "1.4"

[[bin]]
name = "driftguard"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
